--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:prod": "NODE_ENV=prod node server.js",
     "debug": "ndb server.js",
     "build": "npm install",
-    "deploy": "npm run build && npm run start"
+    "deploy": "npm run build && npm run start:prod"
   },
   "keywords": [],
   "author": "",
